k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-challenge
  labels:
    environment: production
    app.kubernetes.io/managed-by: github-actions
