k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-challenge
  labels:
    app: devops-backend
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      name: http
  selector:
    app: devops-backend
